--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.PAT }}
 
       - name: Run php-cs-fixer
         uses: docker://oskarstark/php-cs-fixer-ga
@@ -25,6 +26,8 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          commit_user_name: Markus Poerschke (Bot)
+          commit_user_eamil: markus+githubbot@poerschke.nrw
           commit_message: Fix code style!
 
   test:
