--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,31 +7,13 @@ on:
       - "1.x"
 
 jobs:
-  fix-code-style:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-          token: ${{ secrets.PAT }}
-
-      - name: Run php-cs-fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
-
-      - name: Run prettier
-        uses: actionsx/prettier@v2
-        with:
-          args: --write .
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_user_name: Markus Poerschke (Bot)
-          commit_user_email: markus+githubbot@poerschke.nrw
-          commit_message: Fix code style!
-
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        php-version:
+          - "7.4"
+          - "8.0"
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v2"
@@ -39,7 +21,7 @@ jobs:
       - name: "Install PHP with extensions"
         uses: "shivammathur/setup-php@v2"
         with:
-          php-version: "7.4"
+          php-version: ${{ matrix.php-version }}
 
       - name: "Determine composer cache directory"
         id: "determine-composer-cache-directory"
