--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,14 @@
+/.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php_cs export-ignore
+/.prettierignore export-ignore
 /.travis.yml export-ignore
-/CHANGELOG.md export-ignore
-/composer.lock
-/Makefile
+/composer.lock export-ignore
+/Makefile export-ignore
+/phpunit.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
 /psalm.xml export-ignore
-/README.md export-ignore
+/psalm.xml export-ignore
+/rulesets.xml export-ignore
 /tests export-ignore
