--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           version: ${{ github.event.inputs.version }}
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@feature/create-new-branch-during-checkout
         with:
           branch: release/${{ github.event.inputs.version }}
           commit_user_name: Markus Poerschke (Bot)
