--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -27,12 +27,13 @@ jobs:
           version: ${{ env.RELEASE_VERSION }}
 
       - name: Create Release
-        uses: actions/create-release@v1
+        uses: thomaseizinger/create-release@1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
+          target_commitish: ${{ github.event.pull_request.merge_commit_sha }}
           tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: Release ${{ env.RELEASE_VERSION }}
+          name: ${{ env.RELEASE_VERSION }}
           body: ${{ steps.changelog.outputs.description }}
           draft: false
           prerelease: false
