--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Danger
         uses: danger/danger-js@10.6.2
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
