--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: "actions/cache@v1"
         with:
           path: "${{ steps.determine-composer-cache-directory.outputs.directory }}"
-          key: "php-composer-cache"
+          key: "php-${{ matrix.php-version }}-composer-cache"
 
       - name: "Run tests"
         run: "make -j -O test"
