Automatically check PRs using danger.js (#20)

--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -4,13 +4,13 @@ on: [pull_request]
 
 jobs:
   fix-code-style:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run php-cs-fixer
         uses: docker://oskarstark/php-cs-fixer-ga
