--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -22,11 +22,11 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: Update changelog
-        uses: thomaseizinger/keep-a-changelog-new-release@1.1.0
+        uses: thomaseizinger/keep-a-changelog-new-release@1.2.0
         with:
           version: ${{ github.event.inputs.version }}
 
-      - uses: stefanzweifel/git-auto-commit-action@4
+      - uses: stefanzweifel/git-auto-commit-action@v4.9.0
         with:
           branch: release/${{ github.event.inputs.version }}
           commit_user_name: Markus Poerschke (Bot)
