--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-20.04
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Extract version from branch name (for release branches)
         run: |
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
