--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
     "name": "markuspoerschke/extractum",
-    "type": "library",
     "description": "Extract information from web pages.",
+    "license": "MIT",
+    "type": "library",
     "keywords": [
         "extractor",
         "scraper",
         "readability"
     ],
-    "license": "MIT",
     "authors": [
         {
             "name": "Markus Poerschke",
             "email": "markus@poerschke.nrw"
         }
     ],
+    "support": {
+        "issues": "https://github.com/markuspoerschke/extractum/issues",
+        "sources": "https://github.com/markuspoerschke/extractum"
+    },
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-dom": "*",
@@ -42,8 +46,9 @@
             "Extractum\\Test\\": "tests/"
         }
     },
-    "support": {
-        "issues": "https://github.com/markuspoerschke/extractum/issues",
-        "sources": "https://github.com/markuspoerschke/extractum"
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        }
     }
 }
